# bkbit

./: .autorc  .buildinfo  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  bkbit.cli.html  bkbit.data_translators.HMBA_annotation_translator.html  bkbit.data_translators.anatomical_structure_translator.html  bkbit.data_translators.file_manifest_translator.html  bkbit.data_translators.genome_annotation_translator.html  bkbit.data_translators.html  bkbit.data_translators.library_generation_translator.html  bkbit.data_translators.specimen_metadata_translator.html  bkbit.html  bkbit.model_converters.html  bkbit.model_converters.sheets_converter.html  bkbit.model_converters.yaml2sheet_converter.html  bkbit.model_editors.add_dunderMethods_genomeAnnotation.html  bkbit.model_editors.html  bkbit.model_editors.linkml_trimmer.html  bkbit.models.anatomical_structure.html  bkbit.models.genome_annotation.html  bkbit.models.html  bkbit.models.library_generation.html  bkbit.utils.generate_bkbit_id.html  bkbit.utils.get_ncbi_taxonomy.html  bkbit.utils.html  bkbit.utils.load_json.html  bkbit.utils.nimp_api_endpoints.html  bkbit.utils.serialize_to_ttl.html  bkbit.utils.setup_logger.html  contributing.html  genindex.html  genome_annotation.html  index.html  install.html  linkml_trimmer.html  list_specimen_library_aliquot.html  modules.html  (+9 more)
.doctrees/: bkbit.cli.doctree  bkbit.data_translators.HMBA_annotation_translator.doctree  bkbit.data_translators.anatomical_structure_translator.doctree  bkbit.data_translators.doctree  bkbit.data_translators.file_manifest_translator.doctree  bkbit.data_translators.genome_annotation_translator.doctree  bkbit.data_translators.library_generation_translator.doctree  bkbit.data_translators.specimen_metadata_translator.doctree  bkbit.doctree  bkbit.model_converters.doctree  bkbit.model_converters.sheets_converter.doctree  bkbit.model_converters.yaml2sheet_converter.doctree  bkbit.model_editors.add_dunderMethods_genomeAnnotation.doctree  bkbit.model_editors.doctree  bkbit.model_editors.linkml_trimmer.doctree  bkbit.models.doctree  (+22 more)
(+125 files in other folders)
