[build-system]
# Setuptools version should match setup.py; wheel because pip will insert it noisily
requires = ["setuptools >= 61.0", "setuptools-scm"]
build-backend = 'setuptools.build_meta'

[project]
name = "bkbit"
authors = [
  { name="brain-bican-bkbit developers"},
]
description = "A library for using brain-bican data models"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text = "Apache 2.0"}
dependencies = [
    "linkml>=1.5",
    "pandas",
    "click",
    "schemasheets",
]
dynamic = ["version"]

[project.scripts]
bkbit = "bkbit.cli:cli"

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
]
test = [
    "pytest",
]
docs = [
    "mkdocs-material"
]

[project.urls]
"Homepage" = "https://github.com/brain-bican/bkbit"

[tool.setuptools_scm]
write_to = "bkbit/_version.py"

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*'
check-hidden = true
# ignore-regex = ''
ignore-words-list = 'ans'
